--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -42,6 +42,7 @@
                 android:text="@string/name"/>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/editProfileTextView"
                 android:maxLines="1"
                 android:ellipsize="end"
