--- a/app/src/main/res/layout/edit_user_profile.xml
+++ b/app/src/main/res/layout/edit_user_profile.xml
@@ -51,12 +51,12 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp">
+            android:layout_height="110dp">
 
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profileImage"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:src="@drawable/ic_profile"
                 app:civ_fill_color="@color/colorAccent"
                 android:layout_marginStart="15dp"
@@ -70,7 +70,7 @@
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:textSize="10sp"
-                android:layout_marginStart="28dp"
+                android:layout_marginStart="23dp"
                 android:layout_marginBottom="5dp"
                 android:layout_width="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -101,6 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
+                android:inputType="textPersonName"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:textColor="@color/black"
