--- a/app/src/main/res/layout/fragment_chop_bet.xml
+++ b/app/src/main/res/layout/fragment_chop_bet.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:Skeleton="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -110,7 +111,7 @@
                                     android:textAlignment="center"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:text="Click to accept"/>
+                                    android:text="Click and hold to accept"/>
 
                                 <LinearLayout
                                     android:layout_centerInParent="true"
@@ -248,22 +249,34 @@
             android:layout_height="match_parent">
         </RelativeLayout>
 
-        <io.rmiri.buttonloading.ButtonLoading
-            android:visibility="visible"
-            android:id="@+id/findBetButton"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:elevation="5dp"
-            android:layout_centerInParent="true"
-            app:BL_backgroundColor="@color/selector"
-            app:BL_circleColor="@color/green"
-            app:BL_circleColorSecond="@color/white"
-            app:BL_enable="true"
-            app:BL_font="fonts/IRANSans_Light.ttf"
-            app:BL_stateShow="normal"
-            app:BL_text="FIND BET"
-            app:BL_textColor="@color/white"
-            app:BL_textSize="16sp" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+
+                        <io.rmiri.buttonloading.ButtonLoading
+
+                            android:visibility="visible"
+                            android:id="@+id/findBetButton"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:elevation="5dp"
+                            android:layout_centerInParent="true"
+                            app:BL_backgroundColor="#80000000"
+                            app:BL_circleColor="@color/green"
+                            app:BL_circleColorSecond="@color/white"
+                            app:BL_enable="true"
+                            app:BL_font="fonts/IRANSans_Light.ttf"
+                            app:BL_stateShow="normal"
+                            app:BL_text="FIND BET"
+                            app:BL_textColor="@color/white"
+                            app:BL_textSize="16sp" />
+
+            </RelativeLayout>
+
+
 
 
         <TextView
@@ -275,7 +288,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="50dp"
             android:foregroundGravity="top"
-            android:textColor="@color/black"/>
+            android:textSize="18dp"
+            android:textColor="@color/white"/>
 
 
         <Button
