--- a/app/src/main/res/layout/list_friends.xml
+++ b/app/src/main/res/layout/list_friends.xml
@@ -20,16 +20,32 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:text="@string/name"
+        android:layout_toStartOf="@+id/addFriend"
         android:layout_toEndOf="@+id/profileImage"
         android:layout_centerVertical="true"
         android:textSize="16sp"
         android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:textColor="@color/black"
         android:ellipsize="end"/>
+
+     <TextView
+        android:id="@+id/addFriend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Friend"
+         android:layout_alignParentEnd="true"
+         android:layout_marginEnd="10dp"
+        android:layout_centerVertical="true"
+        android:textSize="14sp"
+        android:visibility="visible"
+        android:textColor="@color/colorPrimary" />
+
+
 
 
     <RelativeLayout
