--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -16,8 +16,13 @@
         android:icon="@drawable/ic_history"
         android:title="@string/title_history" />
     <item
+        android:id="@+id/nav_transactions"
+        android:icon="@drawable/ic_transactions"
+        android:title="@string/transactions" />
+    <item
         android:id="@+id/nav_wallet"
         android:icon="@drawable/ic_wallet"
         android:title="@string/title_wallet" />
+
 
 </menu>
