--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -6,49 +6,79 @@
 
 
 
+    <LinearLayout
+        android:id="@+id/favouritesLayout"
+        android:visibility="gone"
+        android:layout_marginBottom="10dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_marginStart="10dp"
+                android:text="@string/favourites"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/viewAll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="View All"
+                android:layout_marginEnd="10dp"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                />
+        </RelativeLayout>
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/list_FavouriteFriends"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:choiceMode="multipleChoice"
+                    android:divider="@android:color/transparent"
+                    android:dividerHeight="5dp"
+                    android:scrollbarSize="0dp" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+
+
+
+    </LinearLayout>
+
+
+
 
     <RelativeLayout
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_marginStart="10dp"
-            android:text="@string/favourites"
-            android:textColor="@color/black"
-            android:textSize="13sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/viewAll"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:text="View All"
-            android:layout_marginEnd="10dp"
-            android:textColor="@color/black"
-            android:textSize="13sp"
-            />
-    </RelativeLayout>
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_FavouriteFriends"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:choiceMode="multipleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="5dp"
-        android:scrollbarSize="0dp" />
-
-
-    <RelativeLayout
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
+            android:layout_centerVertical="true"
             android:textColor="@color/black"
             android:layout_marginStart="10dp"
             android:text="@string/friends"
@@ -57,38 +87,55 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:layout_centerVertical="true"
             android:id="@+id/addFriend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add Friend"
             android:layout_toStartOf="@+id/friendRequest"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="15dp"
             android:textColor="@color/colorPrimary"
             android:textSize="13sp"
             />
 
         <TextView
+            android:layout_centerVertical="true"
             android:id="@+id/friendRequest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:text="Requests"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
             android:textColor="@color/black"
             android:textSize="13sp"
             />
 
+
+
     </RelativeLayout>
 
 
 
-
-    <ListView
-        android:id="@+id/list_Friends"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:scrollbarSize="0dp" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/list_Friends"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="0dp"
+                android:scrollbarSize="0dp" />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+
 
 </LinearLayout>
