--- a/app/src/main/res/layout/list_friends.xml
+++ b/app/src/main/res/layout/list_friends.xml
@@ -42,7 +42,7 @@
          android:layout_marginEnd="10dp"
         android:layout_centerVertical="true"
         android:textSize="14sp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:textColor="@color/colorPrimary" />
 
 
