--- a/app/src/main/res/layout/list_bet_details.xml
+++ b/app/src/main/res/layout/list_bet_details.xml
@@ -30,6 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
                 <TextView
+                    android:id="@+id/topAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="30sp"
@@ -73,6 +74,7 @@
                         android:text="Amount"/>
 
                     <TextView
+                        android:id="@+id/bottomAmount"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="10dp"
                         android:layout_centerVertical="true"
@@ -102,6 +104,7 @@
                         android:text="Fee"/>
 
                     <TextView
+                        android:id="@+id/fee"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="10dp"
                         android:layout_centerVertical="true"
@@ -157,6 +160,7 @@
                         android:text="Date"/>
 
                     <TextView
+                        android:id="@+id/date"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="10dp"
                         android:layout_centerVertical="true"
@@ -186,6 +190,7 @@
                         android:text="Match ID"/>
 
                     <TextView
+                        android:id="@+id/matchID"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="10dp"
                         android:layout_centerVertical="true"
@@ -220,6 +225,7 @@
                         android:text="Result"/>
 
                     <TextView
+                        android:id="@+id/wonOrLost"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="10dp"
                         android:layout_centerVertical="true"
@@ -349,6 +355,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/dispute"
             android:layout_marginEnd="5dp"
             android:layout_alignParentStart="true"
             android:layout_width="wrap_content"
@@ -359,6 +366,7 @@
             android:textColor="@color/colorPrimary"/>
 
         <TextView
+            android:id="@+id/report"
             android:layout_marginEnd="10dp"
             android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
