--- a/app/src/main/res/layout/edit_user_profile.xml
+++ b/app/src/main/res/layout/edit_user_profile.xml
@@ -7,6 +7,7 @@
 
 
     <RelativeLayout
+        android:visibility="gone"
         android:id="@+id/actionLayout"
         android:layout_width="match_parent"
         android:layout_height="40dp">
@@ -229,6 +230,17 @@
                 android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+                <com.dx.dxloadingbutton.lib.LoadingButton
+                    android:id="@+id/btnSave"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:lb_resetAfterFailed="true"
+                    app:lb_btnRippleColor="#000000"
+                    app:lb_btnText="SAVE"
+                    app:lb_btnColor="@color/colorPrimary"
+                    />
 
             </RelativeLayout>
 
