--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -29,95 +29,80 @@
 
             <ImageView
                 android:layout_width="60dp"
-                android:layout_height="40dp"
+                android:layout_height="30dp"
                 android:layout_margin="10dp"
                 android:background="@color/white"/>
 
-            <TextView
-                android:id="@+id/bonusHeader"
-                android:textSize="12sp"
-
-                android:layout_marginStart="40dp"
-                android:textColor="@color/white"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/stick1"
-                android:text="BONUS"/>
-
-            <TextView
-                android:id="@+id/bonusText"
-                android:layout_below="@+id/bonusHeader"
-                android:textSize="14sp"
-                android:layout_alignStart="@+id/bonusHeader"
-                android:textColor="@color/white"
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="0.00"/>
-
             <RelativeLayout
                 android:id="@+id/stick1"
-                android:layout_width="2dp"
-                android:layout_height="50dp"
-                android:background="@color/white"
-                android:layout_alignParentBottom="true"
-                android:layout_toStartOf="@+id/burrowedHeader"
-                android:layout_margin="30dp">
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/burrowedHeader"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/stick1"
-                android:text="BURROWED"/>
+                android:layout_width="2dp"
+                android:layout_height="60dp"
+                android:layout_marginBottom="20dp"
+                android:background="@color/white"
+                android:layout_alignParentBottom="true">
+            </RelativeLayout>
+            
+            
+            <RelativeLayout
+                android:layout_width="100dp"
+                android:layout_height="70dp"
+                android:layout_marginEnd="10dp"
+                android:layout_toStartOf="@+id/stick1"
+                android:layout_alignTop="@+id/stick1">
 
-            <TextView
-                android:id="@+id/burrowedText"
-                android:layout_below="@+id/burrowedHeader"
-                android:textSize="14sp"
-                android:layout_alignStart="@+id/burrowedHeader"
-                android:textColor="@color/white"
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="0.00"/>
+                <TextView
+                    android:id="@+id/bonusHeader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="BONUS"
+                    android:textColor="@color/white"
+                    android:layout_centerHorizontal="true"/>
+
+                <TextView
+                    android:id="@+id/bonusTextView"
+                    android:layout_below="@+id/bonusHeader"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0.00"
+                    android:textColor="@color/white"
+                    android:layout_centerHorizontal="true"/>
+
+
+            </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/stick2"
-                android:layout_width="2dp"
-                android:layout_height="50dp"
-                android:background="@color/white"
-                android:layout_alignTop="@+id/stick1"
-                android:layout_marginStart="30dp"
-                android:layout_toEndOf="@+id/burrowedHeader">
+                android:layout_width="100dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/stick1"
+                android:layout_alignTop="@+id/stick1">
+
+                <TextView
+                    android:id="@+id/pointsHeader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="POINTS"
+                    android:textColor="@color/white"
+                    android:layout_centerHorizontal="true"/>
+
+                <TextView
+                    android:id="@+id/pointsTextView"
+                    android:layout_below="@+id/pointsHeader"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0.00"
+                    android:textColor="@color/white"
+                    android:layout_centerHorizontal="true"/>
+
+
             </RelativeLayout>
 
-            <TextView
-                android:id="@+id/pointsHeader"
-                android:layout_centerHorizontal="true"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/stick2"
-                android:layout_marginStart="30dp"
-                android:layout_alignTop="@+id/stick1"
-                android:text="POINTS"/>
+            
 
-            <TextView
-                android:id="@+id/pointsText"
-                android:layout_below="@+id/pointsHeader"
-                android:textSize="14sp"
-                android:layout_alignStart="@+id/pointsHeader"
-                android:textColor="@color/white"
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="0.00"/>
+
 
 
 
@@ -138,19 +123,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <RelativeLayout
+            android:id="@+id/mid"
+            android:layout_centerHorizontal="true"
+            android:layout_width="1dp"
+            android:background="@color/divider"
+            android:layout_height="20dp" />
+
         <TextView
-            android:layout_marginEnd="5dp"
-            android:layout_alignParentStart="true"
+            android:layout_marginEnd="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="WITHDRAW"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/mid"
             android:textSize="13sp"
-            android:layout_marginStart="10dp"
             android:textColor="@color/colorPrimary"/>
 
         <TextView
-            android:layout_marginEnd="10dp"
-            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@+id/mid"
+            android:layout_marginStart="20dp"
+            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ADD FUNDS"
