--- a/app/src/main/res/layout/list_bet_details.xml
+++ b/app/src/main/res/layout/list_bet_details.xml
@@ -15,8 +15,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/detailsCard"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
+        android:layout_height="wrap_content"
         app:elevation="5dp"
         android:layout_marginEnd="20sp"
         android:layout_marginStart="20dp">
@@ -24,7 +23,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="420dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -263,7 +262,7 @@
             <RelativeLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="100dp">
 
                 <TextView
                     android:id="@+id/opponentHeader"
@@ -347,8 +346,8 @@
 
 
     <RelativeLayout
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="75dp"
+        android:layout_below="@+id/detailsCard"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_width="match_parent"
