Profile Image Changes

--- a/app/src/main/res/layout/edit_username.xml
+++ b/app/src/main/res/layout/edit_username.xml
@@ -173,7 +173,7 @@
                     app:lb_resetAfterFailed="true"
                     app:lb_btnRippleColor="#000000"
                     app:lb_btnText="SAVE"
-                    app:lb_btnColor="@color/colorPrimary"
+                    app:lb_btnColor="@color/green"
                     />
 
             </RelativeLayout>
