--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -19,6 +19,7 @@
             android:background="@color/colorPrimary">
 
             <TextView
+                android:id="@+id/balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="GHS 0.00"
@@ -27,11 +28,29 @@
                 android:textColor="@color/white"
                 android:layout_centerHorizontal="true"/>
 
-            <ImageView
+            <RelativeLayout
                 android:layout_width="60dp"
                 android:layout_height="30dp"
-                android:layout_margin="10dp"
-                android:background="@color/white"/>
+                android:layout_margin="10dp">
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="30dp"
+                    android:background="@color/white"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="CBW"
+                    android:textColor="@color/colorPrimary"
+                    android:textStyle="italic"
+                    android:textSize="12sp"
+                    android:layout_centerInParent="true"/>
+
+
+            </RelativeLayout>
+
+
 
             <RelativeLayout
                 android:id="@+id/stick1"
@@ -117,6 +136,7 @@
 
 
     <RelativeLayout
+        android:id="@+id/buttonCard"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_below="@+id/balanceCard"
@@ -131,7 +151,8 @@
             android:layout_height="20dp" />
 
         <TextView
-            android:layout_marginEnd="20dp"
+            android:id="@+id/withdraw"
+            android:layout_marginEnd="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="WITHDRAW"
@@ -141,8 +162,9 @@
             android:textColor="@color/colorPrimary"/>
 
         <TextView
+            android:id="@+id/addFunds"
             android:layout_toEndOf="@+id/mid"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="30dp"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -151,6 +173,17 @@
             android:textColor="@color/colorPrimary"/>
 
     </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/bot"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_below="@+id/buttonCard"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:background="@color/divider"
+        android:layout_height="1dp" />
 
 
 
