--- a/app/src/main/res/drawable/background_curved_white.xml
+++ b/app/src/main/res/drawable/background_curved_white.xml
@@ -4,11 +4,17 @@
     <item>
         <shape>
             <gradient
-                android:startColor="@color/colorPrimary"
-                android:centerColor="@color/colorAccent"
-                android:endColor="@color/colorAccent"
+                android:startColor="@color/white"
+                android:centerColor="@color/white"
+                android:endColor="@color/white"
                 android:angle="315"/>
+
+            <corners
+                android:radius="20dp"
+                />
         </shape>
+
+
 
 
     </item>
