--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -6,9 +6,10 @@
     
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp">
+        android:layout_height="80dp">
 
            <android.support.design.widget.TextInputLayout
+               android:id="@+id/textInput"
                android:paddingTop="10dp"
                android:hint="Search username"
                android:layout_width="match_parent"
@@ -16,16 +17,30 @@
 
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/searchEditText"
-                   android:textSize="15sp"
+                   android:textSize="20sp"
                    android:maxLines="1"
                    android:maxLength="25"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
-                   android:drawableStart="@android:drawable/ic_menu_search"/>
+                   android:drawableStart="@android:drawable/ic_menu_search"
+                   android:drawablePadding="10dp" />
+
+
 
            </android.support.design.widget.TextInputLayout>
 
-
+        <Button
+            android:background="@mipmap/ic_finish"
+            android:id="@+id/searchButton"
+            android:visibility="visible"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:textSize="14sp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="5dp"
+            style="@style/redButton"
+            />
 
 
     </RelativeLayout>
