--- a/app/src/main/res/layout/activity_new_bet.xml
+++ b/app/src/main/res/layout/activity_new_bet.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:Skeleton="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
 
 
     <RelativeLayout
@@ -71,6 +68,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/currentMatchLayout"
+        android:layout_above="@+id/lastMatchLayout"
         android:layout_alignParentStart="true">
 
         <android.support.v7.widget.CardView
@@ -151,6 +149,7 @@
 
 
                     </RelativeLayout>
+
                     <RelativeLayout
                         android:layout_weight="1"
                         android:layout_width="0dp"
@@ -292,10 +291,11 @@
 
 
     <RelativeLayout
-        android:layout_alignParentBottom="true"
         android:id="@+id/lastMatchLayout"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
         <android.support.v7.widget.CardView
             android:layout_margin="10dp"
