--- a/app/src/main/res/layout/activity_phone_verify.xml
+++ b/app/src/main/res/layout/activity_phone_verify.xml
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:ems="10"
-                android:hint="______"
+                android:hint="------"
                 android:inputType="number"
                 android:maxLength="6"
                 android:textAlignment="center"
