--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -29,17 +29,31 @@
                 app:civ_border_width="2dp" />
 
             <TextView
+                android:visibility="visible"
+                android:id="@+id/sendBet"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Start Bet"
+                android:layout_margin="10dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"/>
+
+
+
+
+            <TextView
                 android:id="@+id/name"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="50dp"
-                android:layout_toEndOf="@+id/profileImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/name"/>
+                android:text="@string/name"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/profileImage" />
 
             <TextView
                 android:visibility="gone"
@@ -47,7 +61,7 @@
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
