--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -41,7 +41,31 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="CBW"
+                    android:text="Wallet"
+                    android:textColor="@color/colorPrimary"
+                    android:textStyle="italic"
+                    android:textSize="12sp"
+                    android:layout_centerInParent="true"/>
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_alignParentEnd="true"
+                android:layout_width="70dp"
+                android:layout_height="30dp"
+                android:layout_margin="10dp">
+
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/background_curved_white"
+                    android:layout_alignParentTop="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="CHOP BET"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="italic"
                     android:textSize="12sp"
@@ -184,6 +208,160 @@
         android:layout_width="match_parent"
         android:background="@color/divider"
         android:layout_height="1dp" />
+
+    <RelativeLayout
+        android:visibility="gone"
+        android:id="@+id/fundsSelector"
+        android:layout_below="@+id/bot"
+        android:layout_margin="10dp"
+        android:layout_width="wrap_content"
+        android:background="@color/divider"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="20dp"
+            android:id="@+id/transactionTypeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/black"
+            android:text="WITHDRAW"/>
+
+        <TextView
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
+            android:id="@+id/cancelText"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Cancel"/>
+
+        <LinearLayout
+            android:visibility="gone"
+            android:layout_below="@+id/cancelText"
+            android:id="@+id/withdrawFundsSelector"
+            android:layout_centerInParent="true"
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/mtnW"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/mtn"
+                app:civ_fill_color="@color/colorAccent"
+                app:elevation="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_margin="10dp"
+                app:civ_border_color="#EEE"
+                app:civ_border_width="2dp" />
+
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/vodafoneW"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/vodafone"
+                app:civ_fill_color="@color/colorAccent"
+                app:elevation="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_margin="10dp"
+                app:civ_border_color="#EEE"
+                app:civ_border_width="2dp" />
+
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/tigoW"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/tigo"
+                app:civ_fill_color="@color/colorAccent"
+                app:elevation="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_margin="10dp"
+                app:civ_border_color="#EEE"
+                app:civ_border_width="2dp" />
+
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/airtelW"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/airtel"
+                app:civ_fill_color="@color/colorAccent"
+                app:elevation="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_margin="10dp"
+                app:civ_border_color="#EEE"
+                app:civ_border_width="2dp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_below="@+id/cancelText"
+            android:id="@+id/addFundsSelector"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/mtn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/mtn"
+                app:civ_fill_color="@color/colorAccent"
+                app:elevation="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_margin="10dp"
+                app:civ_border_color="#EEE"
+                app:civ_border_width="2dp" />
+
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/vodafone"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/vodafone"
+                app:civ_fill_color="@color/colorAccent"
+                app:elevation="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_margin="10dp"
+                app:civ_border_color="#EEE"
+                app:civ_border_width="2dp" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/tigo"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:layout_marginStart="15dp"
+                android:src="@drawable/tigo"
+                app:civ_border_color="#EEE"
+                app:civ_border_width="2dp"
+                app:civ_fill_color="@color/colorAccent"
+                app:elevation="5dp" />
+
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/airtel"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/airtel"
+                app:civ_fill_color="@color/colorAccent"
+                app:elevation="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_margin="10dp"
+                app:civ_border_color="#EEE"
+                app:civ_border_width="2dp" />
+
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
+
+
 
 
 
