--- a/app/src/main/res/layout/list_bet_details.xml
+++ b/app/src/main/res/layout/list_bet_details.xml
@@ -34,8 +34,51 @@
                     android:layout_height="wrap_content"
                     android:textSize="30sp"
                     android:textColor="@color/black"
-                    android:layout_centerInParent="true"
-                    android:text="GHS 0.00"/>
+                    android:text="GHS 0.00"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true" />
+
+                <RelativeLayout
+                    android:layout_below="@id/topAmount"
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:textSize="12sp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:layout_marginStart="10dp"
+
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_alignParentStart="true"
+                        android:text="Console"
+                        android:textSize="12sp"
+                        android:id="@+id/console"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:text="Game"
+                        android:textSize="12sp"
+                        android:layout_marginStart="10dp"
+                        android:id="@+id/game"
+                        android:layout_toEndOf="@+id/console"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+
+
+                    <TextView
+                        android:text="Internet"
+                        android:textSize="12sp"
+                        android:layout_marginStart="10dp"
+                        android:layout_toEndOf="@+id/game"
+                        android:id="@+id/internet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </RelativeLayout>
 
 
                 <RelativeLayout
@@ -90,6 +133,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1">
+
+
 
                     <TextView
                         android:layout_centerVertical="true"
