--- a/app/src/main/res/layout/list_history.xml
+++ b/app/src/main/res/layout/list_history.xml
@@ -62,18 +62,51 @@
                 android:textColor="@color/black"
                 android:ellipsize="end"/>
 
-            <TextView
-                android:id="@+id/contactSource"
+
+
+            <RelativeLayout
+                android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:text="contact"
-                android:layout_below="@+id/name"
-                android:layout_marginTop="2dp"
                 android:layout_toEndOf="@+id/profileImage"
+                android:layout_marginTop="2dp"
+                android:layout_below="@+id/name"
                 android:textSize="12sp"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_marginStart="10dp"
-                android:ellipsize="end"/>
+
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_alignParentStart="true"
+                    android:text="Console"
+                    android:textSize="12sp"
+                    android:id="@+id/console"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:text="Game"
+                    android:textSize="12sp"
+                    android:layout_marginStart="10dp"
+                    android:id="@+id/game"
+                    android:layout_toEndOf="@+id/console"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+
+
+                <TextView
+                    android:text="Internet"
+                    android:textSize="12sp"
+                    android:layout_marginStart="10dp"
+                    android:layout_toEndOf="@+id/game"
+                    android:id="@+id/internet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </RelativeLayout>
+
 
             <TextView
                 android:id="@+id/amount"
