--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,4 +34,6 @@
     <color name="colorInternetBroadband">#BF360C</color>
     <color name="colorInternetFibre">#DD2C00</color>
 
+    <color name="black_overlay">#66000000</color>
+
 </resources>
