--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -4,9 +4,9 @@
     <item>
         <shape>
             <gradient
-                android:startColor="@color/colorPrimary"
-                android:centerColor="@color/colorAccent"
-                android:endColor="@color/colorAccent"
+                android:startColor="@color/colorPrimaryDark"
+                android:centerColor="@color/colorPrimaryDark"
+                android:endColor="@color/colorPrimaryDark"
                 android:angle="315"/>
         </shape>
 
