--- a/app/src/main/res/layout/activity_chop_bet.xml
+++ b/app/src/main/res/layout/activity_chop_bet.xml
@@ -15,17 +15,49 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+
+
     </FrameLayout>
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
+    <RelativeLayout
+        android:id="@+id/buttonsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:itemIconTint="@drawable/bottom_nav_icon_selector"
-        app:itemTextColor="@drawable/bottom_nav_icon_selector"
-        android:background="@color/colorPrimaryDarker"
-        app:itemBackground="@color/colorPrimaryDarker"
-        app:menu="@menu/navigation" />
+        android:background="@color/colorPrimaryDarker">
+
+
+
+        <TextView
+            android:visibility="visible"
+            android:id="@+id/findingMatchTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/finding_match"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="50dp"
+            android:foregroundGravity="top"
+            android:textSize="18sp"
+            android:textColor="@color/white"/>
+
+
+
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:itemIconTint="@drawable/bottom_nav_icon_selector"
+            app:itemTextColor="@drawable/bottom_nav_icon_selector"
+            android:background="@color/colorPrimaryDarker"
+            app:itemBackground="@color/colorPrimaryDarker"
+            app:menu="@menu/navigation" />
+
+
+
+
+
+    </RelativeLayout>
+
+
 
 </LinearLayout>
