--- a/app/src/main/res/layout/fragment_chop_bet.xml
+++ b/app/src/main/res/layout/fragment_chop_bet.xml
@@ -8,7 +8,7 @@
 
 
 
-        
+
 
 
         <RelativeLayout
@@ -34,6 +34,30 @@
                         android:layout_marginTop="18dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/historyCard"
+                        android:layout_marginTop="70dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="70dp">
+
+
+                        <ListView
+                            android:id="@+id/list_History"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:divider="@android:color/transparent"
+                            android:dividerHeight="0dp"
+                            android:scrollbarSize="0dp"
+                            android:scrollbars="none"/>
+
+
+
+
+                    </android.support.v7.widget.CardView>
 
 
 
@@ -138,13 +162,13 @@
 
 
         <TextView
-            android:visibility="visible"
+            android:visibility="gone"
             android:id="@+id/findingMatchTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/finding_match"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="50dp"
             android:foregroundGravity="top"
             android:textSize="18sp"
             android:textColor="@color/white"/>
