--- a/app/src/main/res/layout/activity_new_bet.xml
+++ b/app/src/main/res/layout/activity_new_bet.xml
@@ -9,7 +9,9 @@
     <RelativeLayout
         android:id="@+id/currentMatchLayout"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <android.support.v7.widget.CardView
             android:layout_margin="10dp"
@@ -38,6 +40,7 @@
                         android:text="@string/win_chance"/>
 
                     <TextView
+                        android:id="@+id/winPercent"
                         android:textColor="@color/black"
                         android:layout_marginTop="15dp"
                         android:layout_alignParentBottom="true"
